Добавлена операция дополнения, исправлена логика работы с пустым множеством

--- a/test1.ui
+++ b/test1.ui
@@ -114,6 +114,18 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_addition">
+       <property name="font">
+        <font>
+         <pointsize>20</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>¯</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
    <widget class="QTextEdit" name="textEdit">
