Фикс бага с выводом ответа. Вместо замены текста новый результат выводился в конец. Операция вставляется не в конец поля ввода, а на место курсора. Булеан множества.

--- a/test1.ui
+++ b/test1.ui
@@ -76,7 +76,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -199,6 +199,18 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_powerset">
+         <property name="font">
+          <font>
+           <pointsize>20</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Булеан</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </widget>
@@ -208,7 +220,7 @@
      <rect>
       <x>340</x>
       <y>190</y>
-      <width>461</width>
+      <width>471</width>
       <height>141</height>
      </rect>
     </property>
