--- a/test1.ui
+++ b/test1.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>DockWidget</string>
+   <string>Множества</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <widget class="QWidget" name="formLayoutWidget">
